[project]
name = "reinforcement-learning-with-flax-nnx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flax>=0.10.6",
    "gymnasium[atari,mujoco]>=1.1.1",
    "jax>=0.6.1 ; sys_platform == 'win32' or sys_platform == 'darwin'",
    "jax[cuda12]>=0.6.1 ; sys_platform == 'linux'",
    "ray>=2.47.0",
    "swig>=4.3.1",
]
