[project]
name = "reinforcement-learning-with-flax-nnx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flax>=0.10.6",
    "gymnasium[atari,mujoco,other]>=1.1.1",
    "jax[cuda12]>=0.6.1",
    "opencv-python>=4.11.0.86",
    "ray>=2.47.0",
    "wandb>=0.20.1",
]
